<?xml version="1.0"?>
<package format="2">
  <name>camera_msgs</name>
  <version>1.0.0</version>
  <description>Custom message for CarMaker's HiFi Camera Sensor</description>
  <license>IPG Automotive GmbH</license>

  <maintainer email="formulacarmaker@ipg-automotive.com">IPG Formula CarMaker Support</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>

</package>
