<?xml version="1.0"?>
<package format="2">
  <name>cmrosutils</name>
  <version>1.0.0</version>
  <description>
    CarMaker ROS Utilities.
  </description>
  <maintainer email="no@support.com">IPG Automotive GmbH/dbe</maintainer>
  <license>IPG Automotive GmbH</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
