<?xml version="1.0"?>
<package format="2">
  <name>visualizer</name>
  <version>0.0.0</version>
  <description>The visualizer package</description>

  <maintainer email="oriol.martinez.fite@gmail.com">fetty</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <url type="website">https://bcnemotorsport.upc.edu/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ipg_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>ipg_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>ipg_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
