<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hellocm</name>
  <version>0.1.0</version>
  <description>
    External ROS Node for simple communication with CarMaker.
  </description>
  <maintainer email="no@support.com">IPG Automotive GmbH/dbe</maintainer>
  <license>IPG Automotive GmbH</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>hellocm_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
