<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hellocm_cmnode</name>
  <version>1.0.0</version>
  <description>
    Shared library for CarMaker ROS Node example implementation.
  </description>
  <maintainer email="no@support.com">IPG Automotive GmbH/dbe</maintainer>
  <license>IPG Automotive GmbH</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cmrosutils</depend>
  <depend>hellocm_msgs</depend>
  <depend>camera_msgs</depend>
  <depend>vehiclecontrol_msgs</depend>

  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
